--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,15 +10,23 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-widgets": "^4.4.2",
+    "@types/revalidate": "^1.1.2",
     "@types/uuid": "^7.0.3",
     "axios": "^0.19.2",
+    "date-fns": "^2.0.0-alpha.13",
+    "final-form": "^4.19.1",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.2",
+    "react-widgets": "^4.5.0",
+    "react-widgets-date-fns": "^4.0.19",
+    "revalidate": "^1.2.0",
     "semantic-ui-react": "^0.88.2",
     "typescript": "^3.7.5",
     "uuid": "^8.0.0"
